<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Daybook</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Daybook</string>
    <string name="itemTitle">Item</string>
    <string name="subItemTitle">Subitem</string>
    <string name="title_activity_item_form">New Transaction</string>
    <string name="date">Date</string>
    <string name="title">Title</string>
    <string name="payment_type">Payment</string>
    <string name="amount">Amount</string>
    <string name="note">Note</string>
    <string name="add">Add</string>
    <string name="price">Price</string>
    <string name="item">Item</string>
    <string name="dollar_sign">$</string>
    <string name="monthly_total">Monthly Total $</string>
    <string name="month">Month</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="current">Current</string>
    <string name="daily_sum">Daily Sum</string>
    <string name="statistics">Statistics</string>
    <string name="data">Data</string>
    <string name="import_db">Import DB</string>
    <string name="export_db">Export DB</string>
    <string name="export_xls">Export to XLS</string>
    <string name="done">Done</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="title_activity_about">About</string>
    <string name="copyright">Written by Paladin R. Liu. Released under the GPLv3 license. </string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="cannot_create_dir">Can\'t create directory: %s.</string>
    <string name="cannot_export_xls">Can\'t export EXCEL file.</string>
    <string name="cash">Cash</string>
    <string name="credit_card">Credit Card</string>
    <string name="item_sum">Item Summary</string>

</resources>
